--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-	"makefile.configureOnOpen": false
+	"makefile.configureOnOpen": false,
+	"files.associations": {
+		"stdlib.h": "c",
+		"fcntl.h": "c",
+		"unistd.h": "c",
+		"get_next_line.h": "c",
+		"stdio.h": "c"
+	}
 }
